finished the landing page and styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+  <!--Header and Navigation Section-->
   <header>
     <h2><a href="#">Mountain Travel</a></h2>
     <nav>
@@ -18,6 +19,8 @@
       <li><a href="#">Contact</a></li>
     </nav>
   </header>
+
+  <!--Hero Section-->
   <section class="hero">
     <div class="background-image" style="background-image: url(assets/img/main.jpg);"></div>
     <div class="hero-content-area">
@@ -27,6 +30,7 @@
     </div>
   </section>
   
+  <!--Destinations Section-->
   <section class="destinations">
     <h3 class="title">Some of our destinations:</h3>
     <p>Tired of the ocean? Are the plains too plain? Come along with us for one of our mountain adventures.
@@ -40,6 +44,7 @@
     </ul>
   </section>
 
+  <!--Packages Section-->
   <section class="packages">
     <h3 class="title">Tour Packages:</h3>
     <p>We offer a lot of mountaineering packages. Whether you have climbed Everest or dont
@@ -76,6 +81,47 @@
       </li>
     </ul>
   </section>
+
+  <!--Testimonial Section-->
+  <section class="testimonials">
+    <h3 class="title">Testimonials from our adventures:</h3>
+    <hr>
+    <p class="quote">Wow! this tour made me realize how much I love mountains. After going on these
+      tours, I can safely say that they are my favorite geographic feature, and my favorite word starts
+      with M.</p>
+    <p class="author">Joshua Spradling</p>
+    <p class="quote">I never understood why people cared so much about mountains. But then I went on one of
+      these tours. Now I can't understand people who <em>don't</em> care about mountains!</p>
+    <p class="author">PJ</p>
+    <p class="quote">If you want to understand the universe, head to the mountains. I mean, seriously. It's 
+      like, woah. You know? It's like that.</p>
+    <p class="author">Nick Angelora</p>
+  </section>
+
+  <!--Contact Section-->
+  <section class="contact">
+    <h3 class="title">Learn More:</h3>
+    <p>Want to know more about our upcoming mountain-related events, or come to one of our mixers? Just sign up
+      for our mailing list. No spam from us, we promise! Except for the spam that we give you to keep up your energy
+      while you're hiking through the mountains. we have tons of that.
+    </p>
+    <hr>
+    <form action="">
+      <input type="email" placeholder="Email">
+      <a href="#" class="btn">Subscribe Now</a>
+    </form>
+  </section>
+
+  <!--Footer Section-->
+  <footer>
+    <p>Images courtesy of <a href="http://unsplash.com/">unsplash</a></p>
+    <p>Why are you reading this there is never anything interesting in the footer!</p>
+    <ul>
+      <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
+      <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+      <li><a href="#"><i class="fa fa-snapchat-square"></i></a></li>
+    </ul>
+  </footer>
 
 </body>
 </html>
